# pocPipelineDuckDB

./: .gitignore  README.md  cria_dataset_csv.py  pyproject.toml
src/: usando_pandas.py  using_dask.py  using_duckdb.py
