[tool.poetry]
name = "pipeline-etl"
version = "0.1.0"
description = ""
authors = ["Raul.SantosSilveira-ext <Raul.SantosSilveira-ext@ab-Inbev.com >"]
readme = "README.md"

packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.13"
duckdb = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
